# ai-knowledge-assistant-python

./: .env.example  .gitignore  CLIENT_README.md  Dockerfile  Makefile  README.md  asgi.py  benchmark.py  docker-compose.yml  pyproject.toml  pytest.ini
client/: check_documents.py  client.py  register_user.py  test_client.py
src/app/: main.py
src/app/adapters/: __init__.py  gemini_adapter.py  gemma_adapter.py  postgres_adapter.py  weaviate_adapter.py
src/app/core/: __init__.py  config.py  dependencies.py  logging_config.py
src/app/interfaces/: __init__.py  auth.py  database.py  llm.py  vector_store.py
src/app/models/: schemas.py
src/app/routes/: __init__.py  auth_router.py  query_router.py
src/app/services/: __init__.py  auth_service.py  embed_service.py  rag_service.py
tests/: README.md  __init__.py  conftest.py
tests/integration/: test_auth_routes.py
tests/unit/: test_auth_service.py  test_embed_service.py  test_rag_service.py
